package com.tp.commons.domain.donaciones;

public enum Unidad {
    UNIDADES,
    KG,
    METROS,
    LITROS
}
