package com.tp.donatrack.logistica.domain;

public enum EstadoEnvio {
    ASIGNACION_REALIZADA,
    EN_TRASLADO,
    ENTREGADA,
    NO_RECIBIDA,
    PENDIENTE
}
