package com.tp.donatrack.logistica.domain.planificacion;

public record DimensionesFisicas(double pesoKg, double volumenM3) {}