@startuml logistica
!include ../_style.puml

title Módulo servicio-logistica\n(capas controllers / services / repositories / domain, según el código)

skinparam componentStyle uml2

component "servicio-logistica" as Modulo {

    package "controllers" {
        class LogisticaController <<Controller>> {
            +registrarCamion() / listarCamiones()
            +registrarChofer() / listarChoferes()
            +registrarEnvio() / listarEnvios()
            +planificarRutas(lote)
            +registrarRuta() / listarRutas()
            +iniciarRuta(id)
            +entregarEnvio(id) / fallarEnvio(id)
        }
        class LogisticaEventController <<Controller>> {
            +obtenerEventos(): List<EventoLogistica>
        }
    }

    package "services" {
        class LogisticaService <<Service>> {
            +planificarLote(lote)
            +registrarCamion() / registrarChofer()
            +registrarEnvio() / registrarRuta()
            +iniciarRuta(id)
            +registrarEntregaExitosa(id, detalles)
            +registrarEntregaFallida(id, motivo)
        }
    }

    package "repositories" {
        class RutaRepository <<Repository>> {
            +save(r: Ruta) / saveAll()
            +findById() / findAll() / delete()
        }
        class LogisticaEventRepository <<Repository>> {
            +registrar(e: EventoLogistica)
            +obtenerTodos(): List<EventoLogistica>
        }
    }

    package "domain" {
        class Camion {
            -id: Long
            -patente: String
            -volumen: double
            -altura: double
            -capacidadCarga: double
        }
        class Chofer {
            -id: Long
            -nombre: String
            -apellido: String
            -dni: String
        }
        class Ruta {
            -id: Long
            -camion: Camion
            -chofer: Chofer
            -paradas: List<Parada>
            -iniciada: Boolean
            --
            +iniciarRuta()
        }
        class Parada {
            -orden: Integer
            -direccion: String
            -enviosIds: List<Long>
        }
        class Envio {
            -id: Long
            -donacionSegmentadaId: Long
            -entidadBeneficiariaId: Long
            -estado: EstadoEnvio
            --
            +registrarRecepcionExitosa()
            +registrarRecepcionFallida()
        }
        enum EstadoEnvio {
            PENDIENTE
            ASIGNACION_REALIZADA
            EN_TRASLADO
            ENTREGADA
            NO_RECIBIDA
        }
        class EventoLogistica {
            -tipoEvento: String
            -donacionSegmentadaId: Long
            -entidadBeneficiariaId: Long
            -timestamp: LocalDateTime
            -detalles: String
        }

        note top of Envio
            **State**: las transiciones válidas se validan dentro de la
            propia entidad (IllegalStateException si el envío no está
            EN_TRASLADO o ASIGNACION_REALIZADA).
        end note

        package "planificacion" {
            interface Planificacion {
                +planificar(donaciones, camiones, choferes): List<Ruta>
            }
            class CapacidadFisica {
                +planificar(donaciones, camiones, choferes): List<Ruta>
            }
            class CalculadorDimensiones {
                +calcular(cantidad, unidad: Unidad): DimensionesFisicas
            }
            class DimensionesFisicas <<record>> {
                +pesoKg: double
                +volumenM3: double
            }
            note bottom of CapacidadFisica
                **Strategy**: única implementación activa; agrupa
                donaciones por capacidad de peso/volumen y las
                paradas por dirección de la entidad beneficiaria.
            end note
        }
    }
}

package "commons (módulo compartido)" #F7F7F7 {
    class DonacionSegmentadaListaParaEntregarALogisticaDTO <<record>> {
        +donacionSegmentadaId: Long
        +entidadBeneficiariaId: Long
        +direccionEntidadBeneficiaria: String
        +cantidad: int
        +unidad: Unidad
    }
    enum Unidad {
        UNIDADES
        KG
        METROS
        LITROS
    }
}

' ===================== Cableado entre capas =====================
LogisticaController ..> LogisticaService : usa >
LogisticaEventController ..> LogisticaEventRepository : lee eventos >
LogisticaService ..> RutaRepository : persiste >
LogisticaService ..> LogisticaEventRepository : registra eventos >
LogisticaEventRepository ..> EventoLogistica : gestiona >
LogisticaService ..> EventoLogistica : crea >
LogisticaService ..> Planificacion : delega planificación >
LogisticaService ..> Camion
LogisticaService ..> Chofer
LogisticaService ..> Envio
LogisticaService ..> Ruta

' ===================== Relaciones de dominio =====================
Ruta "1" o-- "1" Camion : camion
Ruta "1" o-- "1" Chofer : chofer
Ruta "1" *-- "0..*" Parada : paradas
Envio --> EstadoEnvio : estado
Parada "1" o-- "1..*" Envio : envíos (por ID)
Planificacion <|.. CapacidadFisica
CapacidadFisica "1" --> "1" CalculadorDimensiones
CalculadorDimensiones ..> DimensionesFisicas : crea >
CapacidadFisica ..> Ruta : construye >

' ===================== commons =====================
LogisticaController ..> DonacionSegmentadaListaParaEntregarALogisticaDTO : recibe lote >
Planificacion ..> DonacionSegmentadaListaParaEntregarALogisticaDTO
CalculadorDimensiones --> Unidad

note as N2
    **Alcance acotado por consigna**: servicio-logistica no invoca a
    Donaciones, Incentivos ni Notificaciones (no tiene package clients).
    Solo recibe el lote a planificar (POST /planificar) y expone sus
    eventos para que Donaciones los consulte por polling — ver componentes.puml.
end note

legend right
    |= Color / estereotipo |= Significado |
    | <back:#EFF6FF>     </back> | Clase de dominio |
    | <<Controller>> | Capa de exposición REST |
    | <<Service>> | Capa de aplicación / negocio |
    | <<Repository>> | Persistencia en memoria |
    | <back:#FFF3E0>     </back> | Interfaz (Strategy) |
    | <back:#F1F4E8>     </back> | Enum de dominio |
    | <back:#F7F7F7>     </back> | Módulo `commons` |
endlegend

@enduml
